inspection, maintenance, image handling finished
